2007-12-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce-dlls.sh: Change default target to arm-mingw32ce.
	Remove dependency on readlink.

2007-12-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh: Change default target to arm-mingw32ce.

2007-12-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh: Display bootstrapgcc option on `usage`.
	Move option reporting below option processing.  Exit immediatelly
	if an invalid component is specified.  Actually allow specifying a
	list of components.

2007-12-24  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh (usage): Make it run with sh.

2007-12-21  Danny Backx  <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-mingw32ce-dll.sh: Change target to
	arm-unknown-mingw32ce.

2007-12-17  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh: Make it build with sh.

2007-11-25  Pedro Alves  <pedro_alves@portugalmail.pt>
	    Danny Backx  <dannybackx@users.sourceforge.net>

	* cegcc/importlibs/build.sh: Remove import lib for icmplib, MSDN
	says it's a static library only.

2007-09-03  Danny Backx  <dannybackx@users.sourceforge.net>

	* cegcc/importlibs/build.sh: Generate import lib for the toolhelp
	library.

2007-06-13  Pedro Alves  <pedro_alves@portugalmail.pt>

	* mingw-fake_crt: Remove.

2007-06-13  Pedro Alves  <pedro_alves@portugalmail.pt>

	* script.sh: Rename to ...
	* build-mingw32ce-dlls.sh: ... this.

2007-06-02  Danny Backx  <dannybackx@users.sourceforge.net>

	* cegcc/libstdc++/Makefile : Remove THE_SYSTEM_LIBS variable, somehow
	it broke the build, and apparently I was once wrong in thinking this
	needed to be different for some builds.

2007-05-28  Danny Backx  <dannybackx@users.sourceforge.net>

	* build-cegcc.sh (build_libstdcppdll) : Add error handling.

2007-05-13  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh: Rewrite command line parameters logic.