@@ -1,3 +1,7 @@
+2007-12-26  Danny Backx  <dannybackx@users.sourceforge.net>
+
+	* build-mingw32ce.sh: add call to build-mingw32-dlls.sh.
+
 2007-12-25  Pedro Alves  <pedro_alves@portugalmail.pt>
 
 	* build-mingw32ce-dlls.sh: Change default target to arm-mingw32ce.
